xf86-input-mouse: Update sun_mouse devPrivates code #29049

Update the sun_mouse devPrivates code to conform to the new API
(introducted by commit faeebead7bfcc78535757ca7acc1faf7554c03b7)
that requires the PrivateKey to be registered.

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=29049

Signed-off-by: Patrick E. Kane <pekane52@gmail.com>
Reviewed-by: Jamey Sharp <jamey@minilop.net>
Signed-off-by: Jamey Sharp <jamey@minilop.net>